--- a/style.css
+++ b/style.css
@@ -527,6 +527,7 @@ html {
     border: none;
     background: transparent;
     font-size: 1rem;
+    color: white; /* Detta kommer göra textbaserade eller unicode-baserade kryss vita */
 }
 
 .hidden-search {
@@ -562,7 +563,7 @@ html {
 .text-image {
     text-align: left;
     /* Alignar allt innehåll inuti till vänster */
-    margin-top: 10px;
+    margin-top: 7px;
     /* Ger extra utrymme mellan logotypen och textbilden om det behövs */
 }
 
@@ -573,7 +574,7 @@ html {
     /* Säkerställer att bilden inte blir bredare än dess container */
     height: auto;
     /* Bibehåller bildens proportioner när bredden ändras */
-    margin-top: 10px;
+    margin-top: 5px;
     /* Ger extra utrymme mellan logotypen och textbilden om det behövs */
 }
 
