--- a/style.css
+++ b/style.css
@@ -773,6 +773,7 @@ input:not(:checked)+.slider.large {
     /* Mellanrum mellan etiketten och slidern */
     border-radius: 5px;
     display: inline-block; /* eller 'inline' beroende på dina behov */
+    align-self: flex-start;
 }
 
 .lang-container {
