--- a/style.css
+++ b/style.css
@@ -610,7 +610,7 @@ html {
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: #ccc;
+    background-color: #000000;
     /* Bakgrundsfärg för slider när den är av */
     -webkit-transition: .4s;
     transition: .4s;
@@ -676,7 +676,7 @@ input:checked+.slider:before {
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: #ccc;
+    background-color: #000000;
     /* Bakgrundsfärg när slidern är av */
     transition: .4s;
     border-radius: 34px;
