--- a/startsida-image-links.css
+++ b/startsida-image-links.css
@@ -45,3 +45,34 @@ video {
     height: auto; /* maintain aspect ratio */
     display: block; /* prevent default margin/padding */
 }
+
+.welcome-text {
+    text-align: left;
+    padding: 20px;
+    max-width: 600px;
+    margin: 0 auto;
+}
+
+.welcome-text h1 {
+    margin-bottom: 0.5em;
+    font-size: 1.5em;
+}
+
+.welcome-text p {
+    margin-bottom: 1em;
+    font-size: 1em;
+    line-height: 1.4;
+}
+
+.learn-more {
+    font-size: 0.8em;
+    color: rgb(203, 223, 189);
+    text-decoration: underline;
+}
+
+/* Ny klass för upphovsrättsnotisen */
+.copyrigt-notice {
+    font-size: 0.8em;
+    color: #666; /* En diskret färg */
+    margin-top: 2em; /* Extra utrymme över upphovsrättsnotisen */
+}
