ändrar bakgrundsfärg kontaktforumulär

--- a/contact.css
+++ b/contact.css
@@ -1,3 +1,9 @@
+body {
+    background-color: #faf0ca; /* Din önskade gul-sandfärg */
+    margin: 0; /* Tar bort standardmarginalen runt `body` */
+    font-family: 'Exo 2', sans-serif;
+}
+
 .contact-container {
     background-color: #faf0ca;
     /* Ersätt med din önskade bakgrundsfärg */
