--- a/contact.css
+++ b/contact.css
@@ -10,8 +10,6 @@ body {
     padding: 20px;
     max-width: 800px;
     margin: 40px auto;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    /* Lätt skugga för djup */
     border-radius: 10px;
     /* Rundade hörn */
 }
@@ -44,7 +42,7 @@ body {
 #contactForm button {
     padding: 10px;
     margin-top: 10px;
-    background-color: #89a;
+    background-color: rgb(203, 223, 189);
     color: white;
     border: none;
     border-radius: 5px;
@@ -52,5 +50,5 @@ body {
 }
 
 #contactForm button:hover {
-    background-color: #678;
+    background-color: rgb(203, 223, 189);
 }
