--- a/artiklar/Koksredskap/artiklar/Koksredskap/koksredskap.css
+++ b/artiklar/Koksredskap/artiklar/Koksredskap/koksredskap.css
@@ -1,3 +1,8 @@
+body {
+    background-color: #faf0ca; /* Din önskade gul-sandfärg */
+    margin: 0; /* Tar bort standardmarginalen runt `body` */
+    font-family: 'Exo 2', sans-serif;
+}
 /* köksredskap.css */
 .content-container {
     max-width: 1200px;
