--- a/artiklar/Koksredskap/koksredskap.css
+++ b/artiklar/Koksredskap/koksredskap.css
@@ -1,7 +1,7 @@
 body {
     background-color: #faf0ca; /* Din önskade gul-sandfärg */
     margin: 0; /* Tar bort standardmarginalen runt `body` */
-    font-family: 'Exo 2', sans-serif;
+    font-family: 'League Spartan', sans-serif;
 }
 /* köksredskap.css */
 .content-container {
