--- a/artiklar/Koksredskap/koksredskap.css
+++ b/artiklar/Koksredskap/koksredskap.css
@@ -1,8 +1,14 @@
 body {
-    background-color: #faf0ca; /* Din önskade gul-sandfärg */
-    margin: 0; /* Tar bort standardmarginalen runt `body` */
-    font-family: 'League Spartan', sans-serif;
+    background-color: #faf0ca;
+    /* Din önskade gul-sandfärg */
+    margin: 0;
+    /* Tar bort standardmarginalen runt `body` */
+    font-family: "League Spartan", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-style: semi-bold;
 }
+
 /* köksredskap.css */
 .content-container {
     max-width: 1200px;
@@ -18,17 +24,20 @@ body {
 }
 
 .article-preview {
-    background-color: #faf0ca; /* Samma färg som din tema-färg */
+    background-color: #faf0ca;
+    /* Samma färg som din tema-färg */
     border: 1px solid #ddd;
     border-radius: 10px;
     overflow: hidden;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 .article-preview img {
     width: 100%;
-    height: 200px; /* Anpassa höjden efter dina behov */
-    object-fit: cover; /* Se till att bilden täcker elementet */
+    height: 200px;
+    /* Anpassa höjden efter dina behov */
+    object-fit: cover;
+    /* Se till att bilden täcker elementet */
 }
 
 .article-preview h2 {
