--- a/artiklar/Koksredskap/koksredskap.css
+++ b/artiklar/Koksredskap/koksredskap.css
@@ -6,7 +6,8 @@ body {
     font-family: "League Spartan", sans-serif;
     font-optical-sizing: auto;
     font-weight: 600;
-    font-style: semi-bold;
+    ;
+    font-style: normal;
 }
 
 /* köksredskap.css */
