--- a/artiklar/Koksredskap/koksredskap.css
+++ b/artiklar/Koksredskap/koksredskap.css
@@ -8,6 +8,7 @@ body {
     font-weight: 600;
     ;
     font-style: normal;
+    line-height: 1.5; /* Ökar radavståndet */
 }
 
 /* köksredskap.css */
