--- a/style.css
+++ b/style.css
@@ -772,7 +772,8 @@ input:not(:checked)+.slider.large {
     margin-bottom: 5px;
     /* Mellanrum mellan etiketten och slidern */
     border-radius: 5px;
-    display: block; /* eller 'inline' beroende på dina behov */
+    display: block;
+    /* eller 'inline' beroende på dina behov */
     align-self: flex-start;
 }
 
@@ -1146,15 +1147,19 @@ input:not(:checked)+.slider.large {
 
 
 .title-background {
-    background-color: #000; /* Svart bakgrund */
-    color: white; /* Vit text */
-    padding: 8px 12px; /* Lite padding */
-    height: auto; /* Justeras för att passa innehåll */
-    max-height: 60px; /* Maximal höjd som tillåter 2 rader */
-    overflow: hidden;
+    background-color: #000;
+    /* Svart bakgrund */
+    color: white;
+    /* Vit text */
+    padding: 8px 12px;
+    /* Lite padding */
+    min-height: 60px;
+    /* Minsta höjd som tillåter upp till 2 rader */
     display: -webkit-box;
     -webkit-box-orient: vertical;
-    -webkit-line-clamp: 2; /* Begränsar till 2 rader */
+    -webkit-line-clamp: 2;
+    /* Begränsar till 2 rader */
+    overflow: hidden;
     text-overflow: ellipsis;
     display: flex;
     align-items: center;
@@ -1162,10 +1167,12 @@ input:not(:checked)+.slider.large {
 }
 
 .title-background h2 {
-    margin: 0; /* Ta bort alla marginaler */
+    margin: 0;
+    /* Ta bort alla marginaler */
     display: -webkit-box;
     -webkit-box-orient: vertical;
-    -webkit-line-clamp: 2; /* Begränsar till 2 rader */
+    -webkit-line-clamp: 2;
+    /* Begränsar till 2 rader */
     overflow: hidden;
     text-overflow: ellipsis;
 }
